<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_bottom_nav"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_bottom_nav"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_Add"
        android:icon="@drawable/ic_review"
        android:title="@string/title_add" />
    <item
        android:id="@+id/navigation_ping"
        android:icon="@drawable/ping_bottom_nav"
        android:title="@string/title_myping" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_bxs_user_circle"
        android:title="@string/title_profile" />
   
</menu>