<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:background="@color/white_color"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:layout_gravity="center">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@null"

                        android:hint="@string/et_username"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/black_color"
                        android:textColorHint="@color/sky_blue_color"
                        android:textSize="@dimen/_12sdp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/sky_blue_color" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@null"

                        android:hint="@string/et_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black_color"
                        android:textColorHint="@color/sky_blue_color"
                        android:textSize="@dimen/_12sdp">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/sky_blue_color" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/sky_blue_color"
                    android:textSize="@dimen/_10sdp">

                </TextView>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/register_btn_bg"
                    android:elevation="@dimen/_3sdp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:gravity="center">

                    <View
                        android:id="@+id/View1"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/sky_blue_color" />

                    <TextView
                        android:id="@+id/tvContinue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_toRightOf="@+id/View1"
                        android:text="@string/or_cont"
                        android:textColor="@color/sky_blue_color"
                        android:textSize="@dimen/_12sdp">

                    </TextView>

                    <View
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_toRightOf="@+id/tvContinue"
                        android:background="@color/sky_blue_color" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <LinearLayout

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btn_phone"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@drawable/phone" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/phone"
                            android:textColor="@color/phone_login_color"
                            android:textSize="@dimen/_10sdp">

                        </TextView>


                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/login_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="30dp"
                            android:visibility="gone" />

                        <Button
                            android:id="@+id/btn_facebook"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@drawable/facebook">

                        </Button>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/facebook"
                            android:textColor="@color/facebook_color"
                            android:textSize="@dimen/_10sdp" />


                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btn_google"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@drawable/google">

                        </Button>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/google"
                            android:textColor="@color/google_color"
                            android:textSize="@dimen/_10sdp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:visibility="gone">


                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:src="@drawable/gmail">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/email_login"
                            android:textColor="@color/email_color"
                            android:textSize="@dimen/_10sdp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>