<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.3"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_155sdp"
                    android:layout_height="@dimen/_155sdp"
                    android:src="@drawable/eyu" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_weight="2"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:gravity="center">

                    <View
                        android:id="@+id/View1"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/sky_blue_color"></View>

                    <TextView
                        android:id="@+id/tvContinue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_toRightOf="@+id/View1"
                        android:text="@string/register_with"
                        android:textColor="@color/sky_blue_color"
                        android:textSize="@dimen/_12sdp">

                    </TextView>

                    <View
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_toRightOf="@+id/tvContinue"
                        android:background="@color/sky_blue_color" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/signUpwithPhoneLl"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:src="@drawable/phone">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/phone"
                            android:textColor="@color/phone_login_color"
                            android:textSize="@dimen/_10sdp">

                        </TextView>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/signUpwithFacebookLl"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/login_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="30dp"
                            android:visibility="gone" />


                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:src="@drawable/facebook">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/facebook"
                            android:textColor="@color/facebook_color"
                            android:textSize="@dimen/_10sdp"></TextView>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/signUpwithGoogleLl"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:src="@drawable/google">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/google"
                            android:textColor="@color/google_color"
                            android:textSize="@dimen/_10sdp"></TextView>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/signUpwithGmailLl"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:src="@drawable/gmail">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/email_login"
                            android:textColor="@color/email_color"
                            android:textSize="@dimen/_10sdp"></TextView>
                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center">

                    <View
                        android:id="@+id/View3"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@color/sky_blue_color"></View>

                    <TextView
                        android:id="@+id/tvOr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_toRightOf="@+id/View3"
                        android:text="@string/or"
                        android:textColor="@color/sky_blue_color"
                        android:textSize="@dimen/_12sdp">

                    </TextView>

                    <View
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_toRightOf="@+id/tvOr"
                        android:background="@color/sky_blue_color"></View>
                </RelativeLayout>

                <Button
                    android:id="@+id/btnCreate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/register_page_btn_bg"
                    android:elevation="@dimen/_3sdp"
                    android:text="@string/create"
                    android:textAllCaps="false"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"></Button>


                <TextView
                    android:id="@+id/tvAlreadyAc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/already_have_ac"
                    android:textColor="@color/sky_blue_color"
                    android:textSize="@dimen/_12sdp">

                </TextView>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>